<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HexagonalColorPicker</string>
    <string name="tap_to_change">Tap to change text color!</string>
    <string name="settings">Settings</string>

    <string name="update">Update</string>
    <string name="palette_radius">PaletteRadius</string>
    <string name="swatch_size">SwatchSize</string>
    <string name="swatch_padding">SwatchPadding</string>

    <string name="dummy_category">Dummy category</string>
    <string name="dummy_checkbox">Dummy checkbox</string>
    <string name="dummy_checkbox_summary">Dummy checkbox summary</string>
    <string name="colors">Colors</string>
    <string name="color1">Color 1</string>
    <string name="color2">Color 2</string>
    <string name="tap_to_change_color">Tap to change color</string>
    
</resources>
