<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hidasi="http://schemas.android.com/apk/res-auto"
	android:key="wallpaper_preferences"
	android:title="@string/settings" >

    <PreferenceCategory
		android:title="@string/dummy_category">

        <CheckBoxPreference
            android:title="@string/dummy_checkbox"
			android:summary="@string/dummy_checkbox_summary" />

    </PreferenceCategory>
   
    <PreferenceCategory
		android:title="@string/colors">

	    <sk.hidasi.hexagonalcolorpicker.HexagonalColorPickerPreference
	        android:title="@string/color1"
			android:summary="@string/tap_to_change_color"
	        android:defaultValue="@color/blue"
	        hidasi:paletteRadius="2" />

	    <sk.hidasi.hexagonalcolorpicker.HexagonalColorPickerPreference
	        android:title="@string/color2"
			android:summary="@string/tap_to_change_color"
	        android:defaultValue="@color/red"
	        hidasi:paletteRadius="3" />

	</PreferenceCategory>

</PreferenceScreen>