<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hidasi="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="sk.hidasi.hexagonalcolorpickerexample.MainActivity" >

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tap_to_change"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <sk.hidasi.hexagonalcolorpicker.HexagonalColorPicker
        android:id="@+id/hexagonalColorPicker"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:layout_gravity="center_horizontal"
        hidasi:paletteRadius="3"
        android:padding="4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/palette_radius"
        android:textAppearance="?android:attr/textAppearanceMedium" />

	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
	    android:orientation="horizontal" >

	    <SeekBar
	        android:id="@+id/seekPaletteRadius"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:max="5" />

	    <EditText
	        android:id="@+id/editPaletteRadius"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0"
	        android:ems="3"
	        android:inputType="numberDecimal"
	        android:focusable="false"
	        android:enabled="false" />

	</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:onClick="onUpdateClick">
        <requestFocus />
    </Button>

</LinearLayout>
